# SearchCloud

./: .gitignore  LICENSE  README.md  pyproject.toml
src/searchcloud/: __init__.py
