[project]
name = "searchcloud"
dynamic = ["version"]
description = "SearchCloud"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Vitor", email = "vitorribeiro062@gmail.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "pyfiglet>=1.0.2",
    "rich>=13.9.4",
]

[project.scripts]
searchcloud = "searchcloud:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/searchcloud/version.py"
